<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bap_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/delete_all"
        android:icon="@drawable/ic_delete_sweep_24"/>

    <item android:id="@+id/bap_day_start"
        android:title="@string/day_start"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/day_start"
        android:icon="@drawable/ic_access_time_24"/>

    <item
        android:id="@+id/bap_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>

</menu>