<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".ui.OpenSourceFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/opensans_regular"
            android:textSize="24sp"
            android:text="@string/icon_desc_license" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="@string/icon_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="@string/license_link" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/opensans_regular"
            android:textSize="24sp"
            android:text="@string/appintro_library" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="@string/app_intro_link" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

</LinearLayout>