<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:backgroundTint="@color/colorBackground"
    app:cardElevation="0dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.LicensesFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/about_the_app"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="30sp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_foreground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:padding="16dp"
                android:text="@string/about_description"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/developers"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:padding="8dp"
                android:text="@string/nikola_drljaca"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:padding="8dp"
                android:text="@string/github_nikola" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:padding="8dp"
                android:text="@string/ognjen_drljaca"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:padding="8dp"
                android:text="@string/github_ognjen" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>
