<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="2dp"
    android:backgroundTint="@color/colorCardBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">


    <LinearLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="1"
            android:text="@string/title_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReminderNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_regular"
            android:maxLines="3"
            android:text="@string/note_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/date_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>