<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/colorCardBackground"
    app:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:paddingTop="14dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tvReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="2"
            android:text="@string/title_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReminderNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_regular"
            android:maxLines="10"
            android:text="@string/note_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/date_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_restore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:textColor="?android:attr/colorAccent"
                android:text="Restore"
                style="?attr/borderlessButtonStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?android:attr/colorAccent"
                android:text="Delete"
                style="?attr/borderlessButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>